# file-tagging

./: .gitignore  README  README.md  setup.cfg  tag.py
filetagging/: __init__.py  __main__.py  filetagging.py
