[metadata]
name = filetagging
version = 0.0.1
author = Trevor Last
author_email = trevorclast@gmail.com
description = Program to manage file tags
long_description = file: README
long_description_content_type = text/markdown
url = https://github.com/Treecase/file-tagging
project_urls =
    Bug Tracker = https://github.com/Treecase/file-tagging/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.10
